<resources>
    <string name="app_name">Organizer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="hello_bottom">Hello_bottom</string>
    <string name="switch_fragvents_button">Switch fragment</string>
    <string name="my_fragments">My fragments</string>
    <string name="switch_fragvents">My fragments</string>
    <string name="start_fragment">Start fragment</string>
    <string name="end_fragment">End fragment</string>
    <string name="_1_fragment">Home</string>
    <string name="_2_fragment">Work</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="_3_fragment">Picture</string>
    <string name="_4_fragment">Weather</string>
    <string name="_5_fragment">Games</string>
    <string name="activity_browser">Weather</string>
    <string name="photo">Photo</string>



</resources>